public interface Expression {
    int calculate();
}
